--- a/app/assets/stylesheets/activity_index.css
+++ b/app/assets/stylesheets/activity_index.css
@@ -25,6 +25,7 @@
 
 .activities-table {
   width: 100%;
+  border-spacing: 0px;
 }
 
 .num-activities {
@@ -37,31 +38,37 @@
 }
 
 .activities-table > tbody:first-of-type > tr > th {
+  padding: 0;
+  margin: 0;
+  border: 0;
   background-color: #e6e6ea;
   height: 36px;
-  font-size: 12px;
+  font-size: 10px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
-.activities-table > tbody:first-of-type > tr > th:nth-of-type(1){
+.activities-table > tbody:first-of-type > tr > th:nth-of-type(2){
   display: flex;
   justify-content: flex-start;
   align-items: center;
   padding-left: 5px;
 }
 
-.activities-table > tbody:first-of-type > tr > th:nth-of-type(3){
+.activities-table > tbody:first-of-type > tr > th:nth-of-type(4){
   display: flex;
   justify-content: flex-start;
   align-items: center;
   padding-left: 5px;
 }
 
-.activities-table > tbody:first-of-type > tr > th:nth-of-type(5){
+/* .activities-table > tbody:first-of-type > tr > th:nth-of-type(1){
   display: flex;
   justify-content: flex-start;
   align-items: center;
   padding-left: 5px;
-}
+} */
 
 /* .activities-items > tbody > tr:nth-child(odd) {
   width: 100%;
@@ -82,4 +89,16 @@
 
 .index-table-element > tr > td{
   height: 55px;
+}
+
+td > button {
+  border: none;
+  background-color: inherit;
+  font-size: 16px;
+  color: #1a7fb6;
+}
+
+td > button:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
