--- a/app/assets/stylesheets/map_create.css
+++ b/app/assets/stylesheets/map_create.css
@@ -10,13 +10,20 @@
 }
 
 .map {
-  width: 100%;
-  height: 900px;
-  float: left;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  bottom: 0px;
+  right: 0;
+  /* width: 100%;
+  height: 100%;
+  margin-top: 100%;
+  margin-bottom: 100%; */
+  /* float: left; */
   /* position: relative; */
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   z-index: 0;
 }
 
@@ -86,34 +93,40 @@
   border-color: black;
 }
 
-.map-history-buttons{
+.map-history-buttons, .map-toggle-buttons {
   display: flex;
   flex-direction: row;
+  align-items: center;
   margin-left: 50px;
   margin-right: 50px;
 }
 
-.map-history-buttons > p > a{
+.map-history-buttons > button, .map-toggle-buttons > button{
+  font-weight: 600;
   width: 50px;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  color: #696969;
+  color: #949494;
+  background-color: #f0f0f0;
+  border: none;
 }
 
-.map-history-buttons > p > a:hover {
+.map-history-buttons > button:hover, .map-toggle-buttons > button:hover {
+  cursor: pointer;
   transition: 0.3s;
   background-color: #dadada;
 }
 
-.map-history-buttons > p > a:active {
+.map-history-buttons > button:active, .map-toggle-buttons > button:active {
+  cursor: pointer;
   transition: 0s;
   background-color: #686868;
 }
 
-.map-history-buttons > p > a:active {
+.map-history-buttons > button:active, .map-toggle-buttons > button:active {
   transition: 0s;
   color: white;
 }
@@ -148,12 +161,6 @@
   border-radius: 3px;
   box-shadow: 0px 8px 20px -4px rgba(209,209,209,1);
 }
-
-/* .distance {
-  position: relative;
-  z-index: 1;
-  bottom: 20px;
-} */
 
 .distance-group > p, .distance-container > p {
   margin: 0;
