add short activity index on activity show

--- a/app/assets/stylesheets/activity.css
+++ b/app/assets/stylesheets/activity.css
@@ -183,3 +183,27 @@
   background-color: #f5f5fa;
   transition: 0.3s;
 }
+
+.activity-footer-elements {
+  margin-top: 50px;
+  margin-left: 300px;
+}
+
+.activity-footer-elements > div{
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.activity-footer-elements > ul{
+  margin-left: -30px;
+  list-style: none;
+}
+
+.activity-footer-elements > ul > li > a{
+  text-decoration: none;
+  color: #606169;
+}
+
+.activity-footer-elements > ul > li {
+  margin-bottom: 15px;
+}
