--- a/app/assets/stylesheets/form/new.scss
+++ b/app/assets/stylesheets/form/new.scss
@@ -112,14 +112,15 @@ body{
 
 .signup-form-container{
   background-color: white;
-  width: 396px;
-  height: 415px;
+  width: 430px;
+  height: 430px;
   border-radius: 3px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding-top: 60px;
-  padding-left: 34px;
+  align-items: center;
+  justify-content: center;
+  // padding-top: 60px;
+  // padding-left: 34px;
 }
 
 .signup-form{
@@ -130,9 +131,16 @@ body{
 }
 
 .signup-title{
+  // padding-top: 20px;
   font-size: 32px;
   font-weight: bold;
   padding-bottom: 15px;
+  padding-left: 29px;
+}
+
+.signup-subtag {
+  padding-bottom: 15px;
+  padding-left: 29px;
 }
 
 .signup-username, .signup-new-password{
@@ -142,8 +150,7 @@ body{
 }
 
 .signup-input{
-  border: none;
-  outline: 1px solid #666666;
+  border: 1px solid #ccccd1;
   width: 350px;
   height: 30px;
   padding: 10px;
@@ -152,8 +159,18 @@ body{
 }
 
 .signup-form{
+  width: 100%;
   display: flex;
-  align-items: flex-start;
+  // align-items: flex-start;
+  align-items: center;
+  justify-content: center;
+}
+
+.signup-form-box {
+  width: 430px;
+  // display: flex;
+  // padding-top: 60px;
+  // padding-left: 34px;
 }
 
 .signup-submit {
@@ -165,6 +182,7 @@ body{
   padding: 10px 0 10px 0;
   border-radius: 3px;
   cursor: pointer;
+  margin-right: 29px;
 }
 
 .signup-submit-holder{
@@ -192,7 +210,7 @@ body{
   background: rgba(0,0,0,0.75);
   padding: 20px 0 20px;
   font-size: 32px;
-  font-weight: 100px;
+  font-weight: 200;
   margin-top: 100px;
 }
 
@@ -253,27 +271,39 @@ body{
   margin-left: 8%;
 }
 
+.session-errors-list {
+  width: 400px;
+}
+
+.signup-errors {
+  width: 430px;
+}
+
 .auth-errors {
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   list-style-type: none;
   color: white;
   background-color: red;
   border: 0;
   margin: 0;
-  width: 400px;
+  width: 100%;
   font-size: 12px;
-  padding: 19px 0 19px 0;
+  padding: 0;
+  // padding: 19px 0 19px 0;
 }
 
-// .signup-form-elements{
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+.signup-form-elements{
+  width: 100%;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+}
 
 .error-item{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .home-header-items {
@@ -338,7 +368,7 @@ body{
 }
 
 .demo-login-button{
-  margin-top: 30px;
+  // margin-top: 30px;
   border: none;
   width: 390px;
   height: 48px;
@@ -351,9 +381,18 @@ body{
   background-color: #2d4373;
 }
 
+.session-demo-login {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  height: 80px;
+  width: 400px;
+  background: rgba(0,0,0,0.5);
+}
+
 .session-demo-login-button{
   border: none;
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
   width: 300px;
   height: 40px;
   background-color: #3b5997;
